<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.momentousmoss.tz_devices_messages.ui.messages.MessagesViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/messages_title"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingHorizontal="16dp"
                android:textSize="16sp"
                android:text='@{@string/messages_title_name + viewModel.currentAuthor}'/>

            <TextView
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/messages_title_period"/>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            android:layout_marginVertical="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/messages_title_received"/>

            <include
                layout="@layout/item_message_row" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messages_list_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="1"
                tools:itemCount="2"
                tools:listitem="@layout/item_message_row" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            android:layout_marginVertical="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/messages_title_sent"/>

            <include
                layout="@layout/item_message_row" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/messages_list_sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:orientation="vertical"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="1"
                tools:itemCount="2"
                tools:listitem="@layout/item_message_row" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/black"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/messages_send_new_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:paddingHorizontal="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/messages_send_new_title_author"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newMessageAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    app:errorEnabled="@{viewModel.showEmptyAuthorError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="8dp"
                        android:text="@={viewModel.newMessageAuthor}" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:paddingHorizontal="16dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/messages_send_new_title_text"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newMessageText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    app:errorEnabled="@{viewModel.showEmptyTextError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="8dp"
                        android:text="@={viewModel.newMessageText}" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_gravity="end"
                android:onClick="@{()->viewModel.checkSendMessage()}"
                android:text="@string/messages_send_new_button" />

        </LinearLayout>

    </LinearLayout>

</layout>